--- a/components/common.less
+++ b/components/common.less
@@ -35,7 +35,7 @@ body {
 	border-right-width: 0;
 	/* Merge the border with tabs' one (in their background image) */
 	margin-top: -1px;
-	background-color: @body-background-color;
+	background-color: @content-background-color;
 	color: @content-font-color;
 	direction: ltr;
 
