--- a/components/tabs.less
+++ b/components/tabs.less
@@ -38,7 +38,7 @@ div.vectorTabs {
 			height: 100%;
 			margin: 0;
 			padding: 0;
-			background-color: #f3f3f3;
+			/*background-color: #f3f3f3;*/
 			.background-image('images/tab-normal-fade.png');
 			background-position: bottom left;
 			background-repeat: repeat-x;
