--- a/variables.less
+++ b/variables.less
@@ -11,11 +11,13 @@
 @content-padding: 1em;
 @content-heading-font-size: 1.8em;
 @content-heading-font-family: "Linux Libertine", Georgia, Times, serif;
-@body-background-color: #fff;
+@body-background-color: /*#fff;*/ #c4d6f4;
+// Vectorata
+@content-background-color: #fff;
 @heading-line-height: 1.3;
 
 // Navigation
-@menu-background-color: #f6f6f6;
+@menu-background-color: /*#f6f6f6;*/ #c4d6f4;
 
 // Common menu
 @menu-link-color: #0645ad;
